@@ -1,3 +1,10 @@
+Thu Apr 15 01:11:24 1999  Lars Hamann  <lars@gtk.org>
+
+	* gtk/gtkctree.c (resync_selection): 
+	* gtk/gtkclist.c (resync_selection): fixed undo_selection bug.
+	* gtk/gtkclist.c (gtk_clist_button_release): fixed resync_selection
+ 	bug.
+
 Tue Apr 13 17:14:28 CDT 1999 Shawn T. Amundson <amundson@gtk.org>
 
 	* Released GTK+ 1.2.2
